Updates reviewRoutes to have all CRUD functionalities. Updated script.js to validate filetype of profile pic before sending to backend. Also to handle empty recommendations list returned and to connect with forgot-password UI. game-info.js to return 404 game not found message if games doesn't exist. Added backend route for forgot-password.

--- a/application/web/public/forgot-password.html
+++ b/application/web/public/forgot-password.html
@@ -21,25 +21,38 @@
     </div>
   </header>
 
-  <!-- Forgot Password Form -->
+  <!-- Main Content Section -->
   <section class="content-section">
     <div class="login-box">
+      <!-- Page Title -->
       <h2>Forgot Password</h2>
       <p>Enter your email to receive a password reset link.</p>
+      
+      <!-- Forgot Password Form -->
       <form id="forgot-password-form">
+        <!-- Email Input Field -->
+        <label for="email" class="sr-only">Email Address</label>
         <input
           type="email"
+          id="email"
           name="email"
           placeholder="Email"
           class="input-field"
           required
         />
+        <!-- Submit Button -->
         <button type="submit" class="submit-btn">Send Reset Link</button>
       </form>
+
+      <!-- Placeholder for Success/Error Messages -->
+      <div id="feedback-message" class="feedback-message"></div>
+
+      <!-- Back to Login Link -->
       <a href="login.html" class="forgot-password">Back to Login</a>
     </div>
   </section>
 
+  <!-- Footer Section -->
   <footer>
     <ul class="footer-links">
       <li><a href="#">Ad Choices</a></li>
@@ -47,6 +60,8 @@
       <li><a href="privacy-policy.html">Privacy Policy</a></li>
     </ul>
   </footer>
+
+  <!-- JavaScript Files -->
   <script src="script.js"></script>
   <script src="forgot-password.js"></script>
 </body>
