got login to work (fixed the password hasing issue with DB initialization), I got games to show up after searching and they are now clickable. The game info shows up with the preloaded reviews. I added some input fields to create a review but it's not working after you click submit review.

--- a/application/web/public/login.html
+++ b/application/web/public/login.html
@@ -60,15 +60,15 @@
         </form>
       </div>
 
-      <!-- Footer Section -->
-      <footer>
+      <!-- // Footer Section -->
+      <!-- <footer>
         <ul class="footer-links">
           <li><a href="#">Ad Choices</a></li>
           <li><a href="#">Terms & Conditions</a></li>
           <li><a href="#">Privacy Policy</a></li>
         </ul>
       </footer>
-    </section>
+    </section> -->
 
     <script>
       // DOMContentLoaded ensures the script runs after the page loads
