--- a/application/web/public/game-info.html
+++ b/application/web/public/game-info.html
@@ -12,19 +12,13 @@
 </head>
 
 <body>
-    <!-- 
-        Header Section
-        Includes the banner image, website title, and navigation buttons.
-        The title links back to the homepage, and the buttons allow user authentication.
-    -->
+    <!-- Header Section -->
     <header class="banner">
         <div class="banner-picture"></div>
         <div class="banner-content">
-            <!-- Website Title -->
             <h1 class="title">
                 <a href="index.html" class="title-link">Rate My Video Game</a>
             </h1>
-            <!-- User Authentication Buttons -->
             <div class="buttons">
                 <button class="pill-button">Sign Up</button>
                 <button class="pill-button">Login</button>
@@ -32,40 +26,22 @@
         </div>
     </header>
 
-    <!-- 
-        Main Content Section
-        Contains detailed game information and user reviews.
-    -->
+    <!-- Main Content Section -->
     <section class="content-section">
         <!-- Game Information Section -->
         <div class="game-info">
             <div class="info-top">
-                <!-- 
-                    Game Stats
-                    Dynamically populated with title, rating, and release date.
-                -->
                 <div class="game-stats">
                     <h1 id="game-title">Loading...</h1>
                     <p id="game-rating">Loading...</p>
                     <p id="game-release-date">Loading...</p>
                 </div>
-
-                <!-- 
-                    Game Image
-                    Displays the game's cover image. Dynamically replaced by backend data.
-                -->
                 <div class="game-image">
-                    <!-- Placeholder image for testing -->
                     <img src="gameinfo_testimage.png" alt="Game Image">
-                    <!-- Placeholder for dynamic image loading -->
-                    <!-- <img id="game-cover" src="" alt="Game Image"> -->
                 </div>
             </div>
-
-            <!-- Platforms Section -->
             <div class="info-bottom">
                 <p>Platforms:</p>
-                <!-- Platforms loaded dynamically; default placeholders for now -->
                 <p>Nintendo</p>
                 <p>|</p>
                 <p>Atari</p>
@@ -76,43 +52,30 @@
             </div>
         </div>
 
-        <!-- 
-            Game Reviews Section
-            Displays user-submitted reviews. Reviews are fetched from the backend and added dynamically.
-        -->
+        <!-- Game Reviews Section -->
         <div class="game-reviews">
             <h3>Game Reviews</h3>
+            <!-- "Create Review" Button -->
+            <!-- <button id="create-review-btn" class="pill-button">Create Review</button> -->
+
+            <!-- Review Form (Initially Hidden) -->
+            <form id="create-review-form" class="hidden">
+                <label for="rating">Rating:</label>
+                <input type="number" id="rating" name="rating" min="1" max="5" required>
+                <label for="review_text">Review:</label>
+                <textarea id="review_text" name="review_text" rows="4" required></textarea>
+                <button type="submit" class="submit-btn">Submit Review</button>
+            </form>
+
             <!-- Container for dynamically added reviews -->
             <div id="reviews-container"></div>
         </div>
     </section>
 
-    <!-- 
-        Scripts
-        Includes scripts for backend communication and dynamic content rendering.
-    -->
+    <!-- Scripts -->
     <script src="script.js"></script>
     <script src="game-info.js"></script>
 </body>
 
 </html>
 
-<!-- Key Improvements:
-Consistent Commenting:
-
-Added detailed, professional comments explaining each section, making the file more maintainable.
-Dynamic Backend Integration:
-
-Retained placeholder content (e.g., Loading...) to provide a fallback while backend data is being fetched.
-Marked areas for dynamic updates with clear comments.
-Accessibility:
-
-Ensured alt attributes for images.
-Used semantic HTML tags like <section> and <header> for better structure.
-Responsive Placeholder Content:
-
-Included placeholder text and images for seamless display before API data loads.
-Professional Formatting:
-
-Clean and consistent indentation.
-Logical grouping of elements to improve readability. -->
