--- a/application/web/public/index.html
+++ b/application/web/public/index.html
@@ -36,6 +36,7 @@
     </section>
 
     <div id="recommendations"></div>
+    <!-- Add this div for recommendations -->
     <script src="script.js"></script>
   </body>
 </html>
